Google strategy: OAuth

--- a/.env.template
+++ b/.env.template
@@ -6,9 +6,14 @@ DB_PORT=5432
 DB_USER=postgres
 
 JWT_SECRET=M0nTalV0s3c0meL0sMOcoz
+JWT_REFRESH_TOKEN=M0nTalV0s3c0meL0sMOcozRefresh
+
 
 // ESTE ES UN CORREO QUE CREE PARA PROBAR EL ENVIO DE CORREOS
 MAILER_HOST=smtp.gmail.com
 MAILER_PORT=587
 MAILER_USER=umlbackend@gmail.com
 MAILER_PASSWORD=rhos hltq ncif fluf
+
+
+BACKEND_URL=http://localhost:3000/api
