--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/archiver": "^6.0.3",
+    "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
@@ -42,6 +43,7 @@
     "cookie-parser": "^1.4.7",
     "fs-extra": "^11.3.0",
     "hbs": "^4.2.0",
+    "multer": "^2.0.1",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
